--- a/style.css
+++ b/style.css
@@ -1,203 +1,224 @@
 body {
-    argin: 0;
+    margin: 0;
   font-family: "Times New Roman";
   overflow-x: hidden;
 }
 
 .background-page-1 {
   background-color: #6097bf;
-  background-size: cover;
-  height: 100vh;
-  max-width: 100vw;
-  background-position: center;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding-top: 3%;
 }
 /* NAVBAR CODE START */
-.topnav {
-    width: 100%;
-    position: fixed;
-    overflow: hidden;
-    background-color: #6097bf;
-    color: white;
-    text-decoration: none;
-    z-index: 2;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: stretch;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-.topnav a:hover{
-    color: white;
+*{
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
+}
+body{
+  font-family: montserrat;
+}
+nav{
+  background: #0082e6;
+  height: 80px;
+  width: 100%;
+  position: fixed;
+  z-index: 3;
+}
+label.logo{
+  color: white;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+}
+nav ul{
+  float: right;
+  margin-right: 20px;
+}
+nav ul li{
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
+}
+nav ul li a{
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
 }
 
-  
-  .topnav a {
-    float: left;
+a.active,a:hover{
+  background: #1b9bff;
+  transition: .5s;
+}
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check{
+  display: none;
+}
+@media (max-width: 952px){
+  label.logo{
+    font-size: 30px;
+    padding-left: 50px;
+  }
+  nav ul li a{
+    font-size: 16px;
+  }
+}
+@media (max-width: 858px){
+  .checkbtn{
     display: block;
-    color: #f2f2f2;
+  }
+  ul{
+    position: fixed;
+    width: 40vh;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+    transition: all .5s;
   }
-  
-  .topnav .icon {
-    display: none;
+  nav ul li{
+    display: block;
+    margin: 50px 0px;
+    margin-right: 30px;
+    line-height: 30px;
   }
-
-  
-  .push {
-    display: inline-block;
-    position: relative;
-    
+  nav ul li a{
+    font-size: 20px;
   }
-  
-  .push:after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
+  a:hover,a.active{
+    background: none;
+    color: #0082e6;
+  }
+  #check:checked ~ ul{
     left: 0;
-    background-color: #ffffff;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
   }
-  
-  .push:hover:after {
-    color: white;
-    transform: scaleX(1);
-    transform-origin: bottom left;
-  }
-  @media screen and (max-width: 768px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  @media screen and (max-width: 768px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: flex;
-      text-align: left;
-    }
-  }
-
-  .header{
-    font-weight: bold;
-    font-size: 3rem;
-    font-family: "Times New Roman";
-    letter-spacing: .2rem;
-    text-decoration: underline;
-  }
+}
+section{
+  background: url(bg1.jpg) no-repeat;
+  background-size: cover;
+}
 /* NAVBAR CODE END */
 /* PORTFOLIO TEXT CODE START */
-.header-container{
-  padding-left: 10%;
+.home-container{
+  color: white;
+  background-color: #6097bf;
+  height: auto;
+  padding: 13vh 0%;
+display: flex;
+justify-content: center;
+flex-direction: row;
+text-align: center;
+align-items: center;
 }
 
-.header-text {
-  padding-top: 15%;
-  font-family: "Times New Roman";
-  color: white;
+#header{
   font-size: 3.5rem;
-  margin-bottom: -10px;
-}
-
-.header-par {
+  padding-left: 15%;
+  padding-right: 15%; 
   font-family: "Times New Roman";
-  font-size: 0.75rem;
-  padding-bottom: 1rem;
-  letter-spacing: 0.5rem;
-  color: white;
-}
-.header-btn {
-  letter-spacing: 0.5rem;
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
-  padding-right: 3.3rem !important;
-  padding-left: 4rem !important;
+  letter-spacing: 0.1rem;
 }
 
-.android-image {
-  background-image: url(https://www.rlogical.com/wp-content/uploads/2019/05/android.png);
-  background-repeat: no-repeat;
+#par{
+  font-size: 0.8rem;
+  margin-top: -10px;
+  margin-bottom: 30px;
+  width: 100%;
+  letter-spacing: 0.6rem;
+  font-family: 'Times New Roman';
+}
+
+.header-btn{
+  letter-spacing: 0.6rem;
+ width: 50% !important;
+ padding:1.6% 0 !important;
+}
+
+@media (max-width: 858px){
+.home-container{
+  flex-direction: column-reverse;
+}
 }
 /* PORTFOLIO CODE END */
 /* ABOUT ME CODE START */
-.about-me-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-
-}
-
-  .about-me-text {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content: center;
-    position: relative;
-    right: 65px;
-
-}
-.header2 {
-  color: black;
-  font-family: "Times New Roman";
-  font-weight: bold;
-  letter-spacing: 0.2rem;
- 
-}
-.par2 {
-    font-size: 0.8rem;
-  width: 33%;
-  font-family: "Times New Roman";
-}
-.resume {
-  width: 30%;
-  border-radius: 0% !important;
-  font-family: "Times New Roman" !important;
-  letter-spacing: 0.09rem;
-  padding: 0.5% !important;
+.about-me-container{
+  width: 100%;
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+ .header{
+  width: 60%;
+  text-align: center;
+  font-weight: bold;
+  font-size: 2rem;
+  padding-left: 15%;
+  padding-right: 15%; 
+  font-family: "Times New Roman";
+  letter-spacing: 0.1rem;
+ }
+
+ .par{
+  width: 60%;
+  text-align: center;
+  font-size: 0.8rem;
+  padding-left: 15%;
+  padding-right: 15%; 
+  font-family: "Times New Roman";
+  letter-spacing: 0.1rem;
+ }
+
+ .resume{
+  letter-spacing: 0.3rem;
+  width: 95%;
+  padding: 1.5% 0 !important;
+ }
+
+ .profile-image{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+  width: 60%;
+  height: 64%;
+  position: absolute;
+  left: 35%;
+ }
+
+
+
+ @media (max-width: 858px){
+  .about-me-container{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+.header{
+  margin-top: 30px;
+  width: 100%;
+}
+.par{
+  width: 100%;
 }
 
-.img2 {
-    padding-top: 3%;
-    padding-bottom: 3%;
-    width: 36vw;
-    height: 39vh;
-    padding-right: 6rem;
-    position: relative;
-    right: 175px;
+  .profile-image{
+  position:unset;
+  width: 70%;
+  height: 70%;
 }
-
-
-.imgwithbackground::after {
-    content: "";
-    background: rgba(15, 118, 228, 0.157);
-    width: 18%;
-    height: 39vh;
-    position: absolute;
-    right: 250px;
-    z-index: -1;
-}
-
-
+ }
 /* ABOUT ME CODE END */
 /* SERVICE CODE START */
 .service-container {
@@ -288,7 +309,11 @@ body {
   color: rgb(255, 255, 255) !important;
   font-family:'Times New Roman';}
 
-
+  @media (max-width: 858px){
+    .card-container{
+    flex-direction: column;
+  }
+}
 /* SERVICE CODE END */
 /* HIRE ME CODE START */
 .hire-me{
