--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ section{
   background: url(bg1.jpg) no-repeat;
   background-size: cover;
 }
+
 /* NAVBAR CODE END */
 /* PORTFOLIO TEXT CODE START */
 .home-container{
@@ -284,7 +285,7 @@ align-items: center;
   justify-content: center;
   align-items: center;
 }
-.par3 {
+.par-services {
   font-family: "Times New Roman";
   font-size: smaller;
   width: 50%;
@@ -347,19 +348,19 @@ align-items: center;
     align-items: center;
   }
 
-  .par6{
+  .par-flipcard{
     font-family:'Times New Roman';
     font-size: 0.8rem;
     color: black;
   }
 
-  .header1{
+  .header-flipcard{
     font-weight: bold;
     color: black;
     font-family:'Times New Roman';
   }
 
-  .header3{
+  .header-front-card{
   font-weight: bold;
   color: rgb(255, 255, 255) !important;
   font-family:'Times New Roman';}
@@ -371,6 +372,11 @@ align-items: center;
 }
 /* SERVICE CODE END */
 /* HIRE ME CODE START */
+.header-contact{
+  font-weight: bold;
+  color: rgb(255, 255, 255) !important;
+  font-family:'Times New Roman';
+}
 .hire-me{
   
     display: flex;
@@ -402,7 +408,7 @@ nav ul li a{
 }
 
 }
-.header4{
+.header-hire-me{
     color: black;
     font-weight: bold;
     letter-spacing: .1rem;
@@ -428,6 +434,9 @@ nav ul li a{
     color: white;
     display: flex;
 }
+.__icon__{
+  background-color: black !important;
+}
 .mail{
     margin: 0px;
 }
@@ -439,3 +448,4 @@ nav ul li a{
     color: white;
     margin: 8px;
 }
+/* SOCIALS CODE END */
